--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -245,7 +245,7 @@
                   <tr>
                     <td class="w-1"><span class="avatar" style="background-image: url(./demo/faces/male/9.jpg)"></span></td>
                     <td>Ronald Bradley</td>
-                    <td>Initial commit</td>
+                    <td>Deployed with Travis and Heroku</td>
                     <td class="text-nowrap">May 6, 2018</td>
                     <td class="w-1"><a href="#" class="icon"><i class="fe fe-trash"></i></a></td>
                   </tr>
